Remove dependency on //build/config/sanitizers:deps
As per Chromium commit 1334d4270679548dba126bca749e54bb4232310a, use
"//build/config:exe_and_shlib_deps" instead.

--- a/app/linux/BUILD.gn
+++ b/app/linux/BUILD.gn
@@ -20,7 +20,7 @@ executable("electron_app") {
   deps = [
      "//electron:electron_framework_resources",
      "//electron:electron_app_resources",
-     "//build/config/sanitizers:deps",
+     "//build/config:exe_and_shlib_deps",
      "//build/linux:fontconfig",
      "//chrome/common:version_header",
      "//components/crash/content/app",
